// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Row Element AccordionRow renders an accordion row 1`] = `
<article
  className="tribe-editor__accordion__row active"
>
  <button
    aria-controls="content-id-1"
    aria-expanded="true"
    aria-selected="true"
    className="tribe-editor__button tribe-editor__accordion__row-header header-class"
    id="header-id-1"
    onClick={[Function]}
    role="tab"
    type="button"
  >
    this is header
  </button>
  <div
    aria-hidden="false"
    aria-labelledby="header-id-1"
    className="tribe-editor__accordion__row-content content-class"
    id="content-id-1"
    role="tabpanel"
  >
    this is a content
  </div>
</article>
`;

exports[`Accordion Row Element AccordionRow renders an accordion row with inactive state 1`] = `
<article
  className="tribe-editor__accordion__row"
>
  <button
    aria-controls="content-id-1"
    aria-expanded="false"
    aria-selected="false"
    className="tribe-editor__button tribe-editor__accordion__row-header header-class"
    id="header-id-1"
    onClick={[Function]}
    role="tab"
    type="button"
  >
    this is header
  </button>
  <div
    aria-hidden="true"
    aria-labelledby="header-id-1"
    className="tribe-editor__accordion__row-content content-class"
    id="content-id-1"
    role="tabpanel"
  >
    this is a content
  </div>
</article>
`;

exports[`Accordion Row Element getContentAttrs returns content attributes with active state 1`] = `
Object {
  "aria-hidden": "false",
  "aria-labelledby": "header-id-1",
  "id": "content-id-1",
  "role": "tabpanel",
}
`;

exports[`Accordion Row Element getContentAttrs returns content attributes with inactive state 1`] = `
Object {
  "aria-hidden": "true",
  "aria-labelledby": "header-id-1",
  "id": "content-id-1",
  "role": "tabpanel",
}
`;

exports[`Accordion Row Element getHeaderAttrs returns header attributes with active state 1`] = `
Object {
  "aria-controls": "content-id-1",
  "aria-expanded": "true",
  "aria-selected": "true",
  "id": "header-id-1",
  "role": "tab",
}
`;

exports[`Accordion Row Element getHeaderAttrs returns header attributes with inactive state 1`] = `
Object {
  "aria-controls": "content-id-1",
  "aria-expanded": "false",
  "aria-selected": "false",
  "id": "header-id-1",
  "role": "tab",
}
`;
